@@ -1,5 +1,5 @@
 AUX heyu.init 423 RMD160 96dd75247188abdb8847807863c1cf2952c54279 SHA1 aac324ffc55a7ec20055ce5af6340372a892b853 SHA256 aee16c73a380015858137f7bbc0f1944727ddd82403bc7b2734d291855d0a9a9
-DIST heyu-2.6.0.tgz 518189 RMD160 22918f6c70c54f5754e1f04a02e9a38a0a5d24ac SHA1 18f6cccb6a98519da077814d26ab1b59960df514 SHA256 1284e793520d2e152d9d7032f6727e72fbaaf7c4f4eaf9abea2b85eed090b0d2
-EBUILD heyu-2.6.0.ebuild 2896 RMD160 efebfdc4c1a1406f13a8f09e94a6cec4ed43ed70 SHA1 eef723524e001eddf1e18001f1abc7fb63a0e06c SHA256 2d1f5caeff41eb5c283ed6528de73eb9d2f4d03d7b2164280daa341d93601273
-MISC ChangeLog 1634 RMD160 44f695a74f68121fa6b46e1d1e56352d5f483225 SHA1 9da18bfbfbbae5e9d26a5872cea927da728abc54 SHA256 d1e9dc7a7640f85d41f77ea8b19f82f700e21e1ff059b3b512539c9bcc89e4bd
+DIST heyu-2.7.0.tgz 538676 RMD160 1f208ff917d4bf126afa2e113bcc8bd008654776 SHA1 fdd35b10730036842b023108a69c3c33d73c5ebf SHA256 4ad5127da2cd314ba022481dc266eda45253046f8340f6f6b427e7a1a362ba2b
+EBUILD heyu-2.7.0.ebuild 3528 RMD160 896853258169222ba5625c184b0cc7381ee61699 SHA1 54e864ae9fd3200cba9ee499b097cb234862fb70 SHA256 eac4915535db2b288c3c8182f549ad87bf3940d7f790c74a41bd0da8ba0c249a
+MISC ChangeLog 1764 RMD160 7ee3d8cf424a22c4ecb69eea6501ed35db305058 SHA1 808d637b30a542ea447bdb514474ab85318da4b5 SHA256 478b29fdd5e2a03f0ab0c508071f04502cc14aff5070c2543146a6f754f73e70
 MISC metadata.xml 1225 RMD160 9cc4a306989b21aadc2c46cbe77b49d94f5f7531 SHA1 01b5d2dfc5446f495689a0d1a8357982464e54fb SHA256 9b9ac8546a69802b4de3818d06e98c4738485d6634fb6375f087cb1ae2853a07
